--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
+  "env": {
+    "OUTSETA_API_KEY": "@outseta-api-key",
+    "OUTSETA_SUBDOMAIN": "@outseta-subdomain"
+  },
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://www.jetstor.com" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET" }
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Authorization, Content-Type, Accept" }
       ]
     }
   ]
